Did some re-coloring of text, Fixed some positioning, Fixed horizontal scroll on add-player page

--- a/src/app/add-player/add-player.component.less
+++ b/src/app/add-player/add-player.component.less
@@ -1,7 +1,19 @@
 @import '../../../semantic/src/themes/default/globals/site.variables';
 
-h1.ui.header {
-  color: #1b1464;
+:host {
+  position: relative;
+  height: 100%;
+}
+
+.page-title {
+  width: 100%;
+  h1.ui.header {
+    color: #1b1464;
+  }
+}
+
+.add-form {
+  width: 100%;
 }
 
 .avatar {
