--- a/src/app/place-order/place-order.component.less
+++ b/src/app/place-order/place-order.component.less
@@ -2,6 +2,7 @@
   width: 100%;
   height: ~'calc(100% - 140px)';
   text-align: center;
+  color: #1b1464;
 
   img.splash {
     margin: auto;
@@ -10,6 +11,8 @@
   .ui.progress {
     width: 60%;
     margin: auto;
+    color: #1b1464;
+
     .bar {
       background: #ff5500;
       transition-duration: 10s;
