--- a/src/app/splash/splash.component.less
+++ b/src/app/splash/splash.component.less
@@ -16,10 +16,12 @@
 
     h1.ui.header {
       font-size: 72px;
+      color: #1b1464;
     }
 
     h3.ui.header {
       font-size: 32px;
+      color: #1b1464;
     }
   }
 }
