--- a/src/app/toolbar/toolbar.component.less
+++ b/src/app/toolbar/toolbar.component.less
@@ -22,6 +22,7 @@
   width: 300px;
   height: auto;
   padding: 20px;
+  margin: 0;
 
   position: fixed;
   bottom: 160px;
@@ -43,6 +44,10 @@
 
     visibility: hidden;
     opacity: 0;
+  }
+
+  h3.ui.header {
+    color: #1b1464;
   }
 }
 
